--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
-    <script type="module" src="renderer.js"></script>
+    <script src="renderer.js"></script>
   </body>
 </html>
